<resources>
    <string name="app_name">Sawaany</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="Login">Login</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="Sign_In">Sign In</string>
    <string name="Forget_your_Password">Forget your Password ?</string>
    <string name="Register">Register</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Madinaty">Madinaty</string>
    <string name="New_Account">New Account ?</string>
    <string name="Street_name">Street name</string>
    <string name="Group">Group</string>
    <string name="Building_number">Building number</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="home">home</string>
    <string name="signing">Signing</string>
    <string name="title_activity_navigation_home">NavigationHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Services">Services</string>
    <string name="Auctions">Auctions</string>
    <string name="Buy_Sell"><![CDATA[Buy & Sell]]></string>
    <string name="Contact_us">Contact us</string>
    <string name="Ideas_and_Complain"><![CDATA[Ideas & Complain]]></string>
    <string name="About_App">About App</string>
    <string name="Our_Services">Our Services</string>
    <string name="Pharmacy">Pharmacy</string>
    <string name="Request">Request</string>
    <string name="Join_as_a">"Join as a Craftman?"</string>
    <string name="Previous_Page">Previous Page</string>
    <string name="details">details</string>
    <string name="Add_an_auction">Add an auction?</string>
    <string name="Auction_title">Auction title</string>
    <string name="Product_description">Product description</string>
    <string name="Start_from">Start from</string>
    <string name="Address_here">Address here</string>
    <string name="Images">Images</string>
    <string name="Reviews">Reviews</string>
    <string name="Write_a_review">Write a review</string>
    <string name="What_is_your_problem">What is your problem?</string>
    <string name="Problem_details">Problem details</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>

</resources>
