<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:id="@+id/constraint_login_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
<ImageView
      android:id="@+id/img_logo"
      android:layout_width="match_parent"
      android:layout_height="@dimen/_160sdp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:background="@drawable/loginbg"
      />
    <androidx.cardview.widget.CardView
        android:id="@+id/card_logo"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_138sdp"
        android:layout_marginStart="@dimen/_90sdp"
        android:layout_marginEnd="@dimen/_90sdp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/_11sdp"
        app:cardElevation="@dimen/_3sdp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/Login"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="0.49"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_logo">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:baselineAligned="false"
            android:drawableStart="@drawable/message"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center|start"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_2sdp"
            android:textColorHint="@color/colorGrey6"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:textColor="@color/colorBlack"

        android:textColorHint="@color/colorGrey6"
        app:layout_constraintTop_toBottomOf="@id/T_in_email">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="@dimen/_2sdp"
            android:textSize="@dimen/_15sdp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="@dimen/_10sdp"
            android:textStyle="bold"/>

       <!-- <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/Forgot_password"
            android:textColor="#939598"
            android:textSize="@dimen/_11ssp" />-->
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_26sdp"
        app:cardBackgroundColor="@color/colorBlue"
        app:cardCornerRadius="@dimen/_11sdp"
        app:cardElevation="@dimen/_3sdp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/T_in_password"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
            <TextView
                android:layout_width="@dimen/_190sdp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorWhite"
                android:text="@string/Sign_In"
                android:textSize="@dimen/_15sdp"
                android:gravity="center"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/T_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_btn_login"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/Forget_your_Password"
        android:textColor="#939598"
        android:textSize="@dimen/_15ssp"
        />
    <TextView
        android:id="@+id/T_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/T_forgot_password"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/New_Account"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/_13ssp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>