<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@color/colorGrey2"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/img_services"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/auctions"
            android:layout_marginTop="@dimen/_17sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:text="@string/Add_an_auction"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@id/img_services"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_auction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_41sdp"
            android:inputType="text"
            android:gravity="center|start"
            android:hint="@string/Auction_title"
            android:textColor="@color/colorGrey6"
            android:padding="@dimen/_2sdp"
            android:textColorHint="@color/colorGrey6"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:drawableStart="@drawable/title"
            android:drawablePadding="@dimen/_10sdp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_product_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/T_in_auction_title">

        <EditText
            android:id="@+id/ET_street_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_41sdp"
            android:inputType="text"
            android:gravity="center|start"
            android:hint="@string/Product_description"
            android:textColor="@color/colorGrey6"
            android:padding="@dimen/_2sdp"
            android:textColorHint="@color/colorGrey6"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:drawableStart="@drawable/description"
            android:drawablePadding="@dimen/_10sdp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_product_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/T_in_product_desc"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_product_desc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_41sdp"
            android:layout_gravity="center"
            android:background="#fff"
            android:gravity="center|start"
            android:textColor="@color/colorGrey6"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ic_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:prompt="@string/Madinaty"

            />

        <ImageView
            android:id="@+id/ic_spinner"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/downarrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_Pin_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/job"
            android:paddingStart="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/spinner_product_desc"
            app:layout_constraintTop_toTopOf="parent" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_spinner"
            android:background="@color/colorGrey6"
            android:layout_marginTop="@dimen/_1sdp"
            android:clickable="true"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_start_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_product_type">

        <EditText
            android:id="@+id/ET_start_from"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_41sdp"
            android:inputType="text"
            android:gravity="center|start"
            android:hint="@string/Start_from"
            android:padding="@dimen/_2sdp"
            android:textColor="@color/colorGrey6"
            android:textColorHint="@color/colorGrey6"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:drawableStart="@drawable/price"
            android:drawablePadding="@dimen/_10sdp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/T_in_start_from">

        <EditText
            android:id="@+id/ET_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_41sdp"
            android:inputType="text"
            android:gravity="center|start"
            android:hint="@string/Address_here"
            android:padding="@dimen/_2sdp"
            android:textColorHint="@color/colorGrey6"
            android:textColor="@color/colorGrey6"
            android:textStyle="bold"
            android:textSize="@dimen/_12ssp"
            android:drawableStart="@drawable/pin"
            android:drawablePadding="@dimen/_10sdp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/T_in_address">

        <EditText
            android:id="@+id/ET_images"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_41sdp"
            android:inputType="text"
            android:gravity="center|start"
            android:hint="@string/Images"
            android:padding="@dimen/_2sdp"
            android:textColorHint="@color/colorGrey6"
            android:textColor="@color/colorGrey6"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:drawableStart="@drawable/image"
            android:drawablePadding="@dimen/_10sdp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_7sdp"
        app:cardBackgroundColor="@color/colorBlue"
        app:cardCornerRadius="@dimen/_11sdp"
        app:cardElevation="@dimen/_3sdp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/T_in_images"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp">
            <TextView
                android:layout_width="@dimen/_190sdp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorWhite"
                android:text="@string/Request"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_17sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_btn_request"
        />
</androidx.constraintlayout.widget.ConstraintLayout>