<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
       />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:background="@color/colorGrey2"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/img_services"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/forget"
            android:layout_marginTop="@dimen/_8sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:text="@string/Forget_your_Password"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toBottomOf="@id/img_services"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/T_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:baselineAligned="false"
            android:drawableStart="@drawable/message"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center|start"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_2sdp"
            android:textColorHint="@color/colorGrey6"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_btn_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardBackgroundColor="@color/colorBlue"
        app:cardCornerRadius="@dimen/_11sdp"
        app:cardElevation="@dimen/_3sdp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/T_in_email"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
           >
            <TextView
                android:layout_width="@dimen/_190sdp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorWhite"
                android:text="@string/Request"
                android:textSize="@dimen/_15sdp"
                android:gravity="center"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>